<resources>
    <string name="app_name">MyBooks</string>
    <string name="error_loading_msg">Error Loading data from Google Books API</string>
    <string name="no_search_data">Please insert valid search terms </string>
    <string name="search">Search</string>

    <string name="hint_title">Insert Title</string>
    <string name="hint_author">Insert Author(s)</string>
    <string name="hint_publisher">Insert Publisher</string>
    <string name="hint_isbn">Insert ISBN</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="title">Title:</string>
    <string name="subtitle">Subtitle:</string>
    <string name="authors">Authors:</string>
    <string name="publishers">Publishers:</string>
    <string name="published_date">Published Date:</string>
</resources>
