<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="Book"
            type="com.example.books.Book" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookDetail">

    <TextView
        android:id="@+id/title_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/label_text_size"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgCover"
        android:layout_width="149dp"
        android:layout_height="144dp"
        android:layout_marginTop="@dimen/standard_margin"
        android:imageUrl="@{Book.thumbnail}"
        android:layout_marginStart="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@{Book.title}"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_label" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@{Book.subTitle}"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_label" />

    <TextView
        android:id="@+id/subtitle_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/subtitle"
        android:textSize="@dimen/label_text_size"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
    <TextView
        android:id="@+id/author_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_text_size"
        android:layout_marginStart="@dimen/small_margin"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/authors"
        app:layout_constraintStart_toEndOf="@+id/imgCover"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="0dp"
        android:text="@{Book.authors}"
        app:layout_constraintStart_toEndOf="@+id/imgCover"
        app:layout_constraintTop_toBottomOf="@+id/author_label" />
    <TextView
        android:id="@+id/publisher_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_text_size"
        android:layout_marginStart="@dimen/small_margin"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/publishers"
        app:layout_constraintStart_toEndOf="@+id/imgCover"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthor" />

    <TextView
        android:id="@+id/tvPublisher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="0dp"
        android:text="@{Book.publisher}"
        app:layout_constraintStart_toEndOf="@+id/imgCover"
        app:layout_constraintTop_toBottomOf="@+id/publisher_label" />
    <TextView
        android:id="@+id/date_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_text_size"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:textColor="@color/colorAccent"
        android:text="@string/published_date"
        app:layout_constraintStart_toEndOf="@+id/imgCover"
        app:layout_constraintTop_toBottomOf="@+id/tvPublisher" />

    <TextView
        android:id="@+id/tvPublishedDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="0dp"
        android:text="@{Book.publishedDate}"
        app:layout_constraintStart_toEndOf="@+id/imgCover"
        app:layout_constraintTop_toBottomOf="@+id/date_label" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@{Book.description}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCover" />
</android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>